Text sizing issues on mobile

--- a/resources/css/style2.css
+++ b/resources/css/style2.css
@@ -1,6 +1,6 @@
 html {
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 1em;
 }
 
 header {
@@ -79,8 +79,10 @@ nav a:hover{
 }
 
 footer {
+    height: 5vh;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: #0C0E4E;
     border-bottom: 1px solid #07AAB4;
 }
